samples/invalid/syntax/ambiguous_slash.g
language g0
asm.result = 3/4/5
